--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "nodemon": "^2.0.7"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "heroku-postbuild": "npm run build"
+},
+"engines": {
+    "npm": "5.6.0",
+    "node": "8.10.0"
   },
   "keywords": [
     "node.js",
@@ -33,3 +36,4 @@
   "author": "bezkoder",
   "license": "ISC"
 }
+
